--- a/tex/supporting-information/esthag_supporting.tex
+++ b/tex/supporting-information/esthag_supporting.tex
@@ -25,14 +25,14 @@
 
 % keywords
 \abbreviations{VI}
-\keywords{Vapor intrusion, Preferential pathways}
+\keywords{Vapor intrusion, Preferential pathways, Temporal variability, Finite element modeling, Air exchange rate, Indoor/outdoor pressure difference}
 
 \begin{document}
 
 \newpage
 \subsection{Pressure and Air Exchange Rate}
 \begin{figure}
-  \caption{2D KDE figure showing distributions and relationship between indoor/outdoor pressure difference and air exchange rate. The seasonal median $p_\mathrm{in/out}$ and $A_e$ shown. Only non-CPM period considered.}
+  \caption{2D KDE figure showing distributions and relationship between indoor/outdoor pressure difference and air exchange rate. The seasonal median $p_\mathrm{in/out}$ and $A_e$ are indicated by the location of the respective arrow tips. Only non-CPM period considered.}
   \includegraphics[width=\textwidth]{pressure_air_exchange_rate.pdf}
 \end{figure}
 
